--- a/src/assets/sass/components/topNav.scss
+++ b/src/assets/sass/components/topNav.scss
@@ -6,6 +6,7 @@ header {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	font-family: sourceHan-Regular;
 	a {
 		margin: 0 12px;
 		padding: 20px 12px;
@@ -13,7 +14,7 @@ header {
 		font-size: 1.2rem;
 		font-weight: bold;
 		color: #252424;
-        position: relative;
+		position: relative;
 	}
 	a:hover:after {
 		top: 90%;
@@ -28,5 +29,67 @@ header {
 		bottom: 0;
 		transition: top 100ms cubic-bezier(0, 0.8, 0.13, 1);
 		background-color: #eed1a6;
+	}
+
+	.burger, #burger-checkbox {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 450px) {
+	header {
+		width: calc(100vw - 64px);
+		padding: 0 32px;
+
+		.menu {
+			display: flex;
+			flex-direction: column;
+			position: absolute;
+			top: -128px;
+			right: 12px;
+			background-color: #FFFFFF;
+			box-shadow: 0 0 10px 1px rgba($color: #000000, $alpha: 0.3);
+			border-radius: 12px;
+			opacity: 0;
+			a {
+				margin: 6px 12px;
+				padding: 12px 24px;
+			}
+			a::after {
+				display: none;
+			}
+		}
+
+		.burger {
+			display: inline-block;
+			cursor: pointer;
+			z-index: 1000;
+		}
+
+		.burger span {
+			display: block;
+			width: 20px;
+			height: 2px;
+			background: #252424;
+			margin: 4px 0;
+			transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55), opacity 0.3s ease;
+		}
+
+		#burger-checkbox {
+			display: none;
+		}
+
+		#burger-checkbox:checked + .burger span:nth-child(1) {
+			transform: translateY(6px) rotate(45deg);
+		}
+
+		#burger-checkbox:checked + .burger span:nth-child(2) {
+			opacity: 0;
+			transform: translateX(-20px);
+		}
+
+		#burger-checkbox:checked + .burger span:nth-child(3) {
+			transform: translateY(-6px) rotate(-45deg);
+		}
 	}
 }
