--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -6,12 +6,35 @@
 body {
 	--color: #f1f1f1;
 	background-color: #f6f6f6;
-	background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent);
+	background-image: linear-gradient(
+			0deg,
+			transparent 24%,
+			var(--color) 25%,
+			var(--color) 26%,
+			transparent 27%,
+			transparent 74%,
+			var(--color) 75%,
+			var(--color) 76%,
+			transparent 77%,
+			transparent
+		),
+		linear-gradient(
+			90deg,
+			transparent 24%,
+			var(--color) 25%,
+			var(--color) 26%,
+			transparent 27%,
+			transparent 74%,
+			var(--color) 75%,
+			var(--color) 76%,
+			transparent 77%,
+			transparent
+		);
 	background-size: 55px 55px;
 }
 
 a {
-	margin:  0 4px;
+	margin: 0 4px;
 	padding: 0 4px;
 	color: #000000;
 	text-decoration: none;
@@ -21,7 +44,7 @@ a:hover:after {
 	top: 0%;
 }
 a:after {
-	content: '';
+	content: "";
 	position: absolute;
 	z-index: -1;
 	top: 66%;
@@ -29,7 +52,15 @@ a:after {
 	right: -0.1em;
 	bottom: 0;
 	transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
-	background-color: #EED1A6;
+	background-color: #eed1a6;
+}
+
+.icon {
+	width: 1em;
+	height: 1em;
+	vertical-align: -0.15em;
+	fill: currentColor;
+	overflow: hidden;
 }
 
 @media screen and (max-width: 450px) {
@@ -39,7 +70,7 @@ a:after {
 }
 
 ::selection {
-    background-color: #EED1A6;
+	background-color: #eed1a6;
 }
 
 @font-face {
@@ -48,11 +79,11 @@ a:after {
 }
 @font-face {
 	font-family: sourceHan-Medium;
-	src: url("@/assets/SourceHanSansCN-Medium.otf")
+	src: url("@/assets/SourceHanSansCN-Medium.otf");
 }
 @font-face {
 	font-family: sourceHan-Regular;
-	src: url("@/assets/SourceHanSansCN-Regular.otf")
+	src: url("@/assets/SourceHanSansCN-Regular.otf");
 }
 
 @import "./articleTheme.scss";
