--- a/src/assets/sass/views/homeView.scss
+++ b/src/assets/sass/views/homeView.scss
@@ -24,6 +24,29 @@
 		margin-top: 60px;
 		font-size: 1.2rem;
 	}
+
+	.link {
+		margin-top: 24px;
+		ul {
+			display: flex;
+			li {
+				list-style: none;
+
+				a {
+					svg {
+						font-size: 2rem;
+						transition: .1s;
+					}
+					svg:hover {
+						color: #eed1a6;
+					}
+				}
+				a:after {
+					position: static;
+				}
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 450px) {
