--- a/src/assets/sass/views/homeView.scss
+++ b/src/assets/sass/views/homeView.scss
@@ -72,5 +72,17 @@
 			margin-top: 30px;
 			font-size: 1rem;
 		}
+		.link {
+			margin-top: 24px;
+			ul {
+				li {
+					a {
+						svg {
+							font-size: 1.5rem;
+						}
+					}
+				}
+			}
+		}
 	}
 }
