--- a/src/assets/sass/views/friendView.scss
+++ b/src/assets/sass/views/friendView.scss
@@ -15,26 +15,26 @@
 		font-family: sourceHan-Medium;
 	}
 	ul {
-        width: 100%;
-        height: auto;
+		width: 100%;
+		height: auto;
 		margin-top: 64px;
 		display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
 
 		li {
 			list-style: none;
 			width: 400px;
 			height: auto;
-            margin: 32px;
+			margin: 32px;
 			padding-bottom: 32px;
 			background-color: #ffffff;
 			border-radius: 24px;
 			box-shadow: 0 0 10px 1px #3c3c43c7;
 			overflow: hidden;
 			position: relative;
-            flex-shrink: 0;
+			flex-shrink: 0;
 
 			.background {
 				width: 100%;
@@ -67,9 +67,15 @@
 				flex-direction: column;
 				justify-content: center;
 				align-items: center;
+
 				.name {
+                    width: 85%;
 					font-size: 1.5rem;
 					font-family: sourceHan-Medium;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+                    text-align: center;
 				}
 				.username {
 					font-size: 1rem;
@@ -92,7 +98,7 @@
 					flex-direction: column;
 					justify-content: center;
 					align-items: center;
-                    flex-grow: 1;
+					flex-grow: 1;
 
 					svg {
 						margin: 12px 0;
@@ -105,12 +111,24 @@
 						font-family: sourceHan-Regular;
 					}
 				}
-                .division {
-                    width: 2px;
-                    height: 48px;
-                    background-color: #3c3c436b;
-                    border-radius: 2px;
-                }
+				.division {
+					width: 2px;
+					height: 48px;
+					background-color: #3c3c436b;
+					border-radius: 2px;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 450px) {
+	.friend {
+		padding: 80px 40px;
+
+		ul {
+			li {
+				width: 100%;
 			}
 		}
 	}
