--- a/src/assets/sass/views/friendView.scss
+++ b/src/assets/sass/views/friendView.scss
@@ -69,13 +69,13 @@
 				align-items: center;
 
 				.name {
-                    width: 85%;
+					width: 85%;
 					font-size: 1.5rem;
 					font-family: sourceHan-Medium;
 					white-space: nowrap;
 					overflow: hidden;
 					text-overflow: ellipsis;
-                    text-align: center;
+					text-align: center;
 				}
 				.username {
 					font-size: 1rem;
@@ -117,6 +117,21 @@
 					background-color: #3c3c436b;
 					border-radius: 2px;
 				}
+			}
+		}
+	}
+	.error {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+		p {
+			color: #3c3c43C7;
+			font-size: 2rem;
+			font-family: sourceHan-Regular;
+			span {
+				margin-right: 12px;
 			}
 		}
 	}
