--- a/src/assets/sass/views/friendView.scss
+++ b/src/assets/sass/views/friendView.scss
@@ -14,7 +14,122 @@
 		font-size: 2rem;
 		font-family: sourceHan-Medium;
 	}
-	ul {
+	.loading {
+		margin: 0;
+		padding: 0;
+		box-shadow: none;
+		background-color: transparent;
+		border-radius: 0;
+
+		width: 80%;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		p {
+			color: #3c3c43c7;
+			font-size: 1.4rem;
+			font-family: sourceHan-Regular;
+		}
+
+		.loader {
+			position: relative;
+			width: 42px;
+			height: 42px;
+			border-radius: 10px;
+			margin-bottom: 12px;
+
+			div {
+				width: 8%;
+				height: 24%;
+				background: rgb(128, 128, 128);
+				position: absolute;
+				left: 50%;
+				top: 30%;
+				opacity: 0;
+				border-radius: 50px;
+				box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+				animation: fade458 1s linear infinite;
+			}
+
+			.bar1 {
+				transform: rotate(0deg) translate(0, -130%);
+				animation-delay: 0s;
+			}
+
+			.bar2 {
+				transform: rotate(30deg) translate(0, -130%);
+				animation-delay: -1.1s;
+			}
+
+			.bar3 {
+				transform: rotate(60deg) translate(0, -130%);
+				animation-delay: -1s;
+			}
+
+			.bar4 {
+				transform: rotate(90deg) translate(0, -130%);
+				animation-delay: -0.9s;
+			}
+
+			.bar5 {
+				transform: rotate(120deg) translate(0, -130%);
+				animation-delay: -0.8s;
+			}
+
+			.bar6 {
+				transform: rotate(150deg) translate(0, -130%);
+				animation-delay: -0.7s;
+			}
+
+			.bar7 {
+				transform: rotate(180deg) translate(0, -130%);
+				animation-delay: -0.6s;
+			}
+
+			.bar8 {
+				transform: rotate(210deg) translate(0, -130%);
+				animation-delay: -0.5s;
+			}
+
+			.bar9 {
+				transform: rotate(240deg) translate(0, -130%);
+				animation-delay: -0.4s;
+			}
+
+			.bar10 {
+				transform: rotate(270deg) translate(0, -130%);
+				animation-delay: -0.3s;
+			}
+
+			.bar11 {
+				transform: rotate(300deg) translate(0, -130%);
+				animation-delay: -0.2s;
+			}
+
+			.bar12 {
+				transform: rotate(330deg) translate(0, -130%);
+				animation-delay: -0.1s;
+			}
+		}
+
+		@keyframes fade458 {
+			from {
+				opacity: 1;
+			}
+
+			to {
+				opacity: 0.25;
+			}
+		}
+	}
+
+	.container {
 		width: 100%;
 		height: auto;
 		margin-top: 64px;
@@ -22,127 +137,25 @@
 		flex-wrap: wrap;
 		justify-content: center;
 		align-items: center;
+		-webkit-user-select: none; /* Safari */
+		-moz-user-select: none; /* Firefox */
+		-ms-user-select: none; /* IE/Edge */
+		user-select: none;
 
-		.loading {
-			margin: 0;
-			padding: 0;
-			box-shadow: none;
-			background-color: transparent;
-			border-radius: 0;
-
-			width: 80%;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-
-			p {
-				color: #3c3c43c7;
-				font-size: 1.4rem;
-				font-family: sourceHan-Regular;
-			}
-
-			.loader {
-				position: relative;
-				width: 42px;
-				height: 42px;
-				border-radius: 10px;
-				margin-bottom: 12px;
-
-				div {
-					width: 8%;
-					height: 24%;
-					background: rgb(128, 128, 128);
-					position: absolute;
-					left: 50%;
-					top: 30%;
-					opacity: 0;
-					border-radius: 50px;
-					box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-					animation: fade458 1s linear infinite;
-				}
-
-				.bar1 {
-					transform: rotate(0deg) translate(0, -130%);
-					animation-delay: 0s;
-				}
-
-				.bar2 {
-					transform: rotate(30deg) translate(0, -130%);
-					animation-delay: -1.1s;
-				}
-
-				.bar3 {
-					transform: rotate(60deg) translate(0, -130%);
-					animation-delay: -1s;
-				}
-
-				.bar4 {
-					transform: rotate(90deg) translate(0, -130%);
-					animation-delay: -0.9s;
-				}
-
-				.bar5 {
-					transform: rotate(120deg) translate(0, -130%);
-					animation-delay: -0.8s;
-				}
-
-				.bar6 {
-					transform: rotate(150deg) translate(0, -130%);
-					animation-delay: -0.7s;
-				}
-
-				.bar7 {
-					transform: rotate(180deg) translate(0, -130%);
-					animation-delay: -0.6s;
-				}
-
-				.bar8 {
-					transform: rotate(210deg) translate(0, -130%);
-					animation-delay: -0.5s;
-				}
-
-				.bar9 {
-					transform: rotate(240deg) translate(0, -130%);
-					animation-delay: -0.4s;
-				}
-
-				.bar10 {
-					transform: rotate(270deg) translate(0, -130%);
-					animation-delay: -0.3s;
-				}
-
-				.bar11 {
-					transform: rotate(300deg) translate(0, -130%);
-					animation-delay: -0.2s;
-				}
-
-				.bar12 {
-					transform: rotate(330deg) translate(0, -130%);
-					animation-delay: -0.1s;
-				}
-			}
-
-			@keyframes fade458 {
-				from {
-					opacity: 1;
-				}
-
-				to {
-					opacity: 0.25;
-				}
-			}
+		.slot {
+			margin: 32px;
+			background-color: #3c3c4344;
+			border-radius: 32px;
+			transform: .2s;
+		}
+		.slot:hover {
+			background-color: #3c3c4327;
 		}
 
-		li {
+		.item {
 			list-style: none;
 			width: 400px;
 			height: auto;
-			margin: 32px;
 			padding-bottom: 32px;
 			background-color: #ffffff;
 			border-radius: 24px;
@@ -226,6 +239,9 @@
 						font-family: sourceHan-Regular;
 					}
 				}
+				a:after {
+					display: none;
+				}
 				.division {
 					width: 2px;
 					height: 48px;
@@ -257,14 +273,15 @@
 	.friend {
 		padding: 80px 40px;
 
-		ul {
-			.loading {
-				p {
-					font-size: 1.2rem;
-				}
+		.loading {
+			p {
+				font-size: 1.2rem;
 			}
-			li {
-				width: 100%;
+		}
+
+		.container {
+			.item {
+				width: 80vw;
 			}
 		}
 		.error {
