--- a/src/assets/sass/components/topNav.scss
+++ b/src/assets/sass/components/topNav.scss
@@ -7,6 +7,7 @@ header {
 	justify-content: flex-end;
 	align-items: center;
 	font-family: sourceHan-Regular;
+	z-index: 9999;
 	a {
 		margin: 0 12px;
 		padding: 20px 12px;
