--- a/src/assets/sass/components/articleView/content.scss
+++ b/src/assets/sass/components/articleView/content.scss
@@ -16,6 +16,19 @@
 	.subTitle {
 		font-size: 1.3rem;
 	}
+	.tagBar {
+		width: 100%;
+		height: 64px;
+		display: flex;
+		align-items: center;
+
+		span {
+			margin-right: 12px;
+			padding: 6px 12px;
+			background-color: #eed1a6;
+			border-radius: 8px;
+		}
+	}
 }
 
 @media screen and (max-width: 450px) {
@@ -25,10 +38,14 @@
 		.title {
 			width: calc(100% - 24px);
 			font-size: 2rem;
-			padding: 0 12px;
 		}
 		.subTitle {
 			font-size: 1rem;
+		}
+		.tagBar {
+			width: calc(100% - 24px);
+		}
+		.title, .subTitle, .time, .tagBar {
 			padding: 0 12px;
 		}
 	}
