修复了友链页手机端的样式

--- a/src/assets/sass/views/friendView.scss
+++ b/src/assets/sass/views/friendView.scss
@@ -278,6 +278,10 @@
 	.friend {
 		padding: 80px 40px;
 
+		.title {
+			padding: 0;
+		}
+
 		.loading {
 			p {
 				font-size: 1.2rem;
@@ -285,6 +289,7 @@
 		}
 
 		.container {
+			width: auto;
 			.item {
 				width: 80vw;
 			}
